<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.cnoelle</groupId>
	<artifactId>exam-tests</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Exam tests</name>
	<description>Pax Exam tests</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<pax.exam.version>4.12.0</pax.exam.version>
	</properties>
	
	<inceptionYear>2018</inceptionYear>
	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
			<distribution>manual</distribution>
		</license>
	</licenses>

	<scm>
		<connection>scm:git:git://github.com/smartrplace/exam-tests.git</connection>
		<developerConnection>scm:git:git://github.com/smartrplace/exam-tests.git</developerConnection>
		<url>https://github.com/smartrplace/exam-tests</url>
		<tag>HEAD</tag>
	</scm>

	<dependencyManagement>
		<dependencies>
			<!-- OSGi -->
			<dependency>
				<groupId>org.osgi</groupId>
				<artifactId>osgi.core</artifactId>
				<version>7.0.0</version>
			</dependency>
			<dependency>
				<groupId>org.osgi</groupId>
				<artifactId>osgi.cmpn</artifactId>
				<version>7.0.0</version>
			</dependency>
			<!-- Felix framework -->
			<dependency>
				<groupId>org.apache.felix</groupId>
				<artifactId>org.apache.felix.framework</artifactId>
				<version>6.0.1</version>
			</dependency>
			<!-- Equinox framework -->
			<dependency>
			    <groupId>org.eclipse.tycho</groupId>
			    <artifactId>org.eclipse.osgi</artifactId>
			    <version>3.13.0.v20180226-1711</version>
			</dependency>
	     	<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.12</version>
			</dependency>
		    <dependency>
				<groupId>org.ops4j.pax.exam</groupId>
				<artifactId>pax-exam-junit4</artifactId>
				<version>${pax.exam.version}</version>
			</dependency>
			<dependency>
			    <groupId>org.ops4j.pax.exam</groupId>
			    <artifactId>pax-exam-container-native</artifactId>
			    <version>${pax.exam.version}</version>
			</dependency>
			<dependency>
			    <groupId>org.ops4j.pax.exam</groupId>
			    <artifactId>pax-exam-container-forked</artifactId>
			    <version>${pax.exam.version}</version>
			</dependency>
			<dependency>
				<groupId>org.ops4j.pax.exam</groupId>
				<artifactId>pax-exam-link-mvn</artifactId>
				<version>${pax.exam.version}</version>
			</dependency>
			<dependency>
				<groupId>org.ops4j.pax.url</groupId>
				<artifactId>pax-url-aether</artifactId>
				<version>2.5.4</version>
			</dependency>
			<dependency>
				<groupId>org.apache.geronimo.specs</groupId>
				<artifactId>geronimo-atinject_1.0_spec</artifactId>
				<version>1.0</version>
			</dependency>
			<dependency>
			    <groupId>org.ops4j.pax.tinybundles</groupId>
			    <artifactId>tinybundles</artifactId>
			    <version>3.0.0</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<modules>
		<module>equinox-forked-test</module>
		<module>equinox-native-test</module>
		<module>felix-forked-test</module>
 		<module>felix-native-test</module>
		<module>felix-ogema-forked</module>
		<module>felix-ogema-native</module>
		<module>felix-ogema-secure-forked</module>
		<module>felix-ogema-secure-native</module>
	</modules>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.felix</groupId>
					<artifactId>maven-bundle-plugin</artifactId>
					<extensions>true</extensions>
					<version>4.0.0</version>
					<executions><!-- FIXME? -->
						<execution>
							<id>bundle-manifest</id>
							<phase>generate-test-sources</phase>
							<goals>
								<goal>manifest</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
						<showDeprecation>true</showDeprecation>
						<showWarnings>true</showWarnings>
						<compilerArgs>
							<arg>-Xlint</arg>
						</compilerArgs>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	
	<!-- these properties are required for the native containers, 
		whereas the forked ones are configured using CoreOptions.vmOption -->
	<profiles>
        <profile>
            <id>java8</id>
            <activation>
			    <jdk>[1.0,1.9)</jdk>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <argLine>
                                -ea
                            </argLine>
                            <trimStackTrace>false</trimStackTrace>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>java9</id>
            <activation>
                <jdk>[9,11)</jdk>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <argLine>
                                -ea
								--illegal-access=warn
								--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED
                            </argLine>
                            <trimStackTrace>false</trimStackTrace>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
	</profiles>
</project>
